<resources>
    <string name="app_name">jobtask</string>
    <string name="titulo">jobtask</string>
    <string name="registro">Registro</string>
    <string name="correo">Correo</string>
    <string name="psw">Contraseña</string>
    <string name="fecnac">Fecha de nacimineto</string>
    <string name="genero">Genero</string>
    <string name="masculino">Hombre</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
